assignment3-initial (1)/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'", "'.'", "','", 
                     "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "BLOCK_COMMENT", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", 
                      "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADDOP", "SUBOP", "MULOP", "DIVOP", 
                      "MODOP", "NOTOP", "ANDOP", "OROP", "EQOP", "DIFOP", 
                      "LT", "GT", "LE", "GE", "BELONG", "LSB", "RSB", "LP", 
                      "RP", "LB", "RB", "DOT", "COMMA", "SEMI", "COLON", 
                      "EQUAL", "IDENTIFIER", "INTLIT", "FLOATLIT", "STRINGLIT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_shortform_vardecl = 4
    RULE_fullform_vardecl = 5
    RULE_prefullform_vardecl = 6
    RULE_base_fullform = 7
    RULE_idlist = 8
    RULE_explist = 9
    RULE_param = 10
    RULE_paramsdecl = 11
    RULE_funcdecl = 12
    RULE_paramslist = 13
    RULE_paramsprime = 14
    RULE_return_type = 15
    RULE_expr = 16
    RULE_relational_expr = 17
    RULE_logical_expr = 18
    RULE_adding_expr = 19
    RULE_multiply_expr = 20
    RULE_ulogical_expr = 21
    RULE_sign_expr = 22
    RULE_index_expr = 23
    RULE_funcall = 24
    RULE_funcall_list = 25
    RULE_operands = 26
    RULE_stmt = 27
    RULE_assg_stmt = 28
    RULE_lhs = 29
    RULE_scalar_var = 30
    RULE_if_stmt = 31
    RULE_for_stmt = 32
    RULE_conditional_expr = 33
    RULE_update_expr = 34
    RULE_init_expr = 35
    RULE_while_stmt = 36
    RULE_do_while_stmt = 37
    RULE_break_stmt = 38
    RULE_continue_stmt = 39
    RULE_return_stmt = 40
    RULE_call_stmt = 41
    RULE_block_stmt = 42
    RULE_block_stmt_prime_2 = 43
    RULE_block_stmt_prime = 44
    RULE_boollit = 45
    RULE_arraylit = 46
    RULE_arrayprime_2 = 47
    RULE_arrayprime = 48
    RULE_bool_typ = 49
    RULE_int_typ = 50
    RULE_float_typ = 51
    RULE_string_typ = 52
    RULE_element_typ = 53
    RULE_array_typ = 54
    RULE_type_in_array = 55
    RULE_dimension_list = 56
    RULE_dimension_prime = 57
    RULE_void_typ = 58
    RULE_auto_typ = 59

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "shortform_vardecl", 
                   "fullform_vardecl", "prefullform_vardecl", "base_fullform", 
                   "idlist", "explist", "param", "paramsdecl", "funcdecl", 
                   "paramslist", "paramsprime", "return_type", "expr", "relational_expr", 
                   "logical_expr", "adding_expr", "multiply_expr", "ulogical_expr", 
                   "sign_expr", "index_expr", "funcall", "funcall_list", 
                   "operands", "stmt", "assg_stmt", "lhs", "scalar_var", 
                   "if_stmt", "for_stmt", "conditional_expr", "update_expr", 
                   "init_expr", "while_stmt", "do_while_stmt", "break_stmt", 
                   "continue_stmt", "return_stmt", "call_stmt", "block_stmt", 
                   "block_stmt_prime_2", "block_stmt_prime", "boollit", 
                   "arraylit", "arrayprime_2", "arrayprime", "bool_typ", 
                   "int_typ", "float_typ", "string_typ", "element_typ", 
                   "array_typ", "type_in_array", "dimension_list", "dimension_prime", 
                   "void_typ", "auto_typ" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    BLOCK_COMMENT=2
    AUTO=3
    BREAK=4
    BOOLEAN=5
    DO=6
    ELSE=7
    FALSE=8
    FLOAT=9
    FOR=10
    FUNCTION=11
    IF=12
    INTEGER=13
    RETURN=14
    STRING=15
    TRUE=16
    WHILE=17
    VOID=18
    OUT=19
    CONTINUE=20
    OF=21
    INHERIT=22
    ARRAY=23
    ADDOP=24
    SUBOP=25
    MULOP=26
    DIVOP=27
    MODOP=28
    NOTOP=29
    ANDOP=30
    OROP=31
    EQOP=32
    DIFOP=33
    LT=34
    GT=35
    LE=36
    GE=37
    BELONG=38
    LSB=39
    RSB=40
    LP=41
    RP=42
    LB=43
    RB=44
    DOT=45
    COMMA=46
    SEMI=47
    COLON=48
    EQUAL=49
    IDENTIFIER=50
    INTLIT=51
    FLOATLIT=52
    STRINGLIT=53
    WS=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.decllist()
            self.state = 121
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.decl()
                self.state = 124
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shortform_vardecl(self):
            return self.getTypedRuleContext(MT22Parser.Shortform_vardeclContext,0)


        def fullform_vardecl(self):
            return self.getTypedRuleContext(MT22Parser.Fullform_vardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.shortform_vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.fullform_vardecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Shortform_vardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def element_typ(self):
            return self.getTypedRuleContext(MT22Parser.Element_typContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_shortform_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortform_vardecl" ):
                return visitor.visitShortform_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def shortform_vardecl(self):

        localctx = MT22Parser.Shortform_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_shortform_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.idlist()
            self.state = 138
            self.match(MT22Parser.COLON)
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY, MT22Parser.BELONG]:
                self.state = 139
                self.element_typ()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 140
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 143
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fullform_vardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prefullform_vardecl(self):
            return self.getTypedRuleContext(MT22Parser.Prefullform_vardeclContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_fullform_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFullform_vardecl" ):
                return visitor.visitFullform_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def fullform_vardecl(self):

        localctx = MT22Parser.Fullform_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fullform_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.prefullform_vardecl()
            self.state = 146
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prefullform_vardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def prefullform_vardecl(self):
            return self.getTypedRuleContext(MT22Parser.Prefullform_vardeclContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def base_fullform(self):
            return self.getTypedRuleContext(MT22Parser.Base_fullformContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_prefullform_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefullform_vardecl" ):
                return visitor.visitPrefullform_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def prefullform_vardecl(self):

        localctx = MT22Parser.Prefullform_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_prefullform_vardecl)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(MT22Parser.IDENTIFIER)
                self.state = 149
                self.match(MT22Parser.COMMA)
                self.state = 150
                self.prefullform_vardecl()
                self.state = 151
                self.match(MT22Parser.COMMA)
                self.state = 152
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.base_fullform()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Base_fullformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def element_typ(self):
            return self.getTypedRuleContext(MT22Parser.Element_typContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_base_fullform

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase_fullform" ):
                return visitor.visitBase_fullform(self)
            else:
                return visitor.visitChildren(self)




    def base_fullform(self):

        localctx = MT22Parser.Base_fullformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_base_fullform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MT22Parser.IDENTIFIER)
            self.state = 158
            self.match(MT22Parser.COLON)
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY, MT22Parser.BELONG]:
                self.state = 159
                self.element_typ()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 160
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 163
            self.match(MT22Parser.EQUAL)
            self.state = 164
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idlist)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(MT22Parser.IDENTIFIER)
                self.state = 167
                self.match(MT22Parser.COMMA)
                self.state = 168
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExplistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def explist(self):
            return self.getTypedRuleContext(MT22Parser.ExplistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_explist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExplist" ):
                return visitor.visitExplist(self)
            else:
                return visitor.visitChildren(self)




    def explist(self):

        localctx = MT22Parser.ExplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_explist)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.expr()
                self.state = 173
                self.match(MT22Parser.COMMA)
                self.state = 174
                self.explist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def element_typ(self):
            return self.getTypedRuleContext(MT22Parser.Element_typContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 179
                self.match(MT22Parser.INHERIT)


            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 182
                self.match(MT22Parser.OUT)


            self.state = 185
            self.match(MT22Parser.IDENTIFIER)
            self.state = 186
            self.match(MT22Parser.COLON)
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY, MT22Parser.BELONG]:
                self.state = 187
                self.element_typ()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 188
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramslist(self):
            return self.getTypedRuleContext(MT22Parser.ParamslistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramsdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamsdecl" ):
                return visitor.visitParamsdecl(self)
            else:
                return visitor.visitChildren(self)




    def paramsdecl(self):
